--- a/report.html
+++ b/report.html
@@ -1897,22 +1897,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,4596],[],[[4,0,0,[],[1,133,319],[]],[5,0,0,[],[1,452,377],[]],[6,0,0,[],[1,830,371],[]],[7,0,0,[],[1,1202,431],[]],[8,0,0,[],[1,1634,331],[]],[9,0,0,[],[1,1965,254],[]],[10,0,0,[],[1,2220,262],[]],[11,0,0,[],[1,2482,398],[]],[12,0,0,[],[1,2880,326],[]],[13,0,0,[],[1,3207,430],[]],[14,0,0,[],[1,3637,346],[]],[15,0,0,[],[1,3984,612],[]]],[],[12,12,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,1178],[],[[4,0,0,[],[0,737,440,5],[]]],[],[1,0,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Departamento","*/home/sami/meustestesacademy/APIacademymeuteste/tests/departamento.robot","*../tests/departamento.robot","*CT01 - Cadastrar um Departamento","*CT02 - departamento com letras maiusculas","*CT03 - departamento com letras minúscula","*CT04 - departamento com letras e caractere &amp;","*CT05 - departamento com letras e numeros","*CT06 - departamento com caracteres especias","*CT07 - departament é obrigátorio","*CT08 - departament com 51 caractere","*CT9 - departament com 50 caractere","*CT10 - department ja cadastrado","*CT11 - Editar departamento","*CT12 - Listar departamento"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Departamento","*/home/sami/meustestesacademy/APIacademymeuteste/tests/departamento.robot","*tests/departamento.robot","*CT10 - department ja cadastrado","*Variable '${department_name}' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":12,"skip":0}],[],[{"elapsed":"00:00:05","fail":0,"id":"s1","label":"Departamento","name":"Departamento","pass":12,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:00","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:01","fail":1,"id":"s1","label":"Departamento","name":"Departamento","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1715092023719;
+window.output["baseMillis"] = 1715091986251;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 4647;
+window.output["generated"] = 1184;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
